[package]
name = "libp2p-identity"
version = "0.2.9"
edition = "2021"
description = "Data structures and algorithms for identifying peers in libp2p."
rust-version = "1.73.0" # MUST NOT inherit from workspace because we don't want to publish breaking changes to `libp2p-identity`.
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking", "cryptography"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1_der = { version = "0.7.6", optional = true, default-features = false, features = ["native_types"] }
bs58 = { version = "0.5.1", optional = true, default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1", optional = true, default-features = false, features = ["fast",
"zeroize"] }
hkdf = { version = "0.12.4", optional = true, default-features = false }
libsecp256k1 = { version = "0.7.0", optional = true, default-features = false, features = ["hmac",
"static-context"] }
tracing = { workspace = true, default-features = false, features = ["attributes"] }
multihash = { git = "https://github.com/umgefahren/rust-multihash.git", optional = true, default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem"], optional = true }
quick-protobuf = { version = "0.8.1", default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
sec1 = { version = "0.7", default-features = false, optional = true }
serde = { version = "1", optional = true, features = ["derive"], default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false }
thiserror = { version = "1.0", optional = true }
void = { version = "1.0", optional = true, default-features = false }
zeroize = { version = "1.8", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { workspace = true, features = ["alloc"], optional = true }

[features]
default = ["std"]
secp256k1 = ["dep:libsecp256k1", "dep:asn1_der", "dep:sha2", "dep:hkdf", "dep:zeroize"]
ecdsa = ["dep:p256", "dep:void", "dep:zeroize", "dep:sec1", "dep:sha2", "dep:hkdf"]
rsa = ["dep:ring", "dep:asn1_der", "dep:rand", "dep:zeroize"]
ed25519 = ["dep:ed25519-dalek", "dep:zeroize", "dep:sha2", "dep:hkdf"]
peerid = ["dep:multihash", "dep:bs58", "dep:sha2", "dep:hkdf"]
rand = ["dep:rand", "ed25519-dalek?/rand_core"]
std = ["dep:thiserror", "asn1_der?/std", "bs58?/std", "ed25519-dalek?/std", "hkdf?/std", "libsecp256k1?/std",
"tracing/std", "multihash?/std", "p256?/std", "quick-protobuf/std", "rand?/std", "serde?/std",
"sha2?/std", "ring?/std"]

[dev-dependencies]
quickcheck = { workspace = true }
base64 = "0.22.1"
serde_json = "1.0"
rmp-serde = "1.3"
criterion = "0.5"
hex-literal = "0.4.1"

[[bench]]
name = "peer_id"
harness = false

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
